// Datenmodell der Vorarlberger Kreuz-Jass Web-Plattform.
//
// Stand M3: Auth + Profil + Audit + Blocklist + Admin-Settings — alles was die
// Registrierungs-/Login-Flows brauchen. Die Game-/Move-/Chat-Modelle für M4/M8
// sind hier mit definiert, damit die initiale Migration alle Tabellen enthält
// und das Schema in einem Stück gelesen werden kann. Der Code, der diese
// Tabellen befüllt, kommt aber erst mit den jeweiligen Meilensteinen.
//
// Quelle für Feldnamen + Beziehungen: Plan-Dokument §4
// (C:\Users\matth\.claude\plans\projekt-vorarlberger-jass-app-vast-kahn.md).
// Abweichungen vom Plan:
//   - Better Auth verlangt die Modelle User, Session, Account, Verification mit
//     bestimmten Feldnamen (camelCase). Wir spiegeln seine Erwartung und
//     ergänzen unsere Domain-Felder (role, status, locale, displayName, …).

generator client {
  provider = "prisma-client-js"
}

datasource db {
  // Prisma 7: `url` ist NICHT mehr im Schema erlaubt (Fail-Fast bei
  // `prisma generate`). Die Connection-URL kommt aus zwei Quellen:
  //   - `prisma.config.ts` für CLI/Migrate
  //   - `PrismaClient({ datasourceUrl: process.env.DATABASE_URL })` für Runtime
  //     (siehe `prisma.service.ts`)
  provider = "postgresql"
}

// ─────────────────────────────────────────────────────────────────────
// Better Auth Core (User / Session / Account / Verification)
//
// Felder folgen better-auth.com/docs/concepts/database — Pflichtfelder sind
// id, email, emailVerified (boolean), name, createdAt, updatedAt. Alles
// andere ist additiv.
// ─────────────────────────────────────────────────────────────────────

model User {
  id            String   @id @default(cuid())
  email         String   @unique
  emailVerified Boolean  @default(false)
  // `name` ist der öffentlich sichtbare Spitzname (unique). Better Auth bezeichnet
  // dieses Feld als "name"; wir behandeln es als das, was der Plan
  // "displayName" nennt — eine Quelle, kein zweites Feld.
  name          String   @unique
  image         String?
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt

  // Domänen-Felder oberhalb des Better-Auth-Minimums
  role       Role       @default(PLAYER)
  status     UserStatus @default(ACTIVE)
  locale     String     @default("de")
  deletedAt  DateTime? // Soft-Delete (Anonymisierung in M10)
  /// Zeitpunkt des letzten „offline gehen" (letzter Socket getrennt) — für die
  /// „zuletzt gesehen"-Anzeige. Null = noch nie online gewesen / unbekannt.
  lastSeenAt DateTime?
  /// Admin-Notiz pro Nutzer (z.B. „Rookie3000 = Martin Meier"). Nur für Admins
  /// sichtbar; v.a. für den LAN-Mode (Admin-Freischaltung statt E-Mail).
  adminNote  String?

  profile              Profile?
  sessions             Session[]
  accounts             Account[]
  pushSubscriptions    PushSubscription[]
  games                GameSeat[]
  movesPlayed          Move[]
  chatMessages         ChatMessage[]
  archivedChatMessages ArchivedChatMessage[]
  friendshipsOut       Friendship[]          @relation("FriendshipRequester")
  friendshipsIn        Friendship[]          @relation("FriendshipAddressee")
  auditActions         AuditLog[]            @relation("AuditActor")

  // M6 — Lobby + Tisch
  ownedTables     LobbyTable[]      @relation("TableOwner")
  tableSeats      LobbyTableSeat[]  @relation("TableSeats")
  joinRequests    GameJoinRequest[] @relation("JoinRequests")
  invitesReceived TableInvite[]     @relation("InvitesReceived")
  invitesSent     TableInvite[]     @relation("InvitesSent")
  rematchVotes    RematchVote[]     @relation("RematchVotes")

  // Meldungen (Report): erstellt vs. gegen mich
  reportsMade    Report[] @relation("ReportsMade")
  reportsAgainst Report[] @relation("ReportsAgainst")

  // PN-Sperren: von mir gesetzt vs. gegen mich
  dmBlocksMade     DmBlock[] @relation("DmBlocker")
  dmBlocksReceived DmBlock[] @relation("DmBlocked")

  // Last-Read-Marker meiner DM-Konversationen (Ungelesen-Zähler)
  dmReads DmRead[] @relation("DmReadUser")

  @@index([status])
  @@index([deletedAt])
}

model Session {
  id        String   @id
  userId    String
  expiresAt DateTime
  token     String   @unique
  ipAddress String?
  userAgent String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([expiresAt])
}

model Account {
  // Better Auth speichert Email-Pass-Credentials sowie OAuth-Linkings hier.
  id                    String    @id
  userId                String
  accountId             String // bei E-Mail/Passwort = userId; bei OAuth = Provider-Subject
  providerId            String // "credential" | "google" | "github" | …
  password              String? // Argon2id-Hash (nur bei providerId="credential")
  accessToken           String?
  refreshToken          String?
  idToken               String?
  accessTokenExpiresAt  DateTime?
  refreshTokenExpiresAt DateTime?
  scope                 String?
  createdAt             DateTime  @default(now())
  updatedAt             DateTime  @updatedAt

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([providerId, accountId])
  @@index([userId])
}

/// Web-Push-Subscription pro Browser/Device. Eine User-Person kann mehrere
/// haben (Desktop, Phone, Tablet). `endpoint` ist global eindeutig — kommt
/// vom Browser-Push-Service als Subscription-URL.
model PushSubscription {
  id         Int       @id @default(autoincrement())
  userId     String
  endpoint   String    @unique
  /// base64url-kodierter P-256-Public-Key der Client-Subscription.
  p256dh     String
  /// base64url-kodiertes Auth-Secret der Client-Subscription.
  auth       String
  /// Optionaler User-Agent zum späteren Anzeigen ("Chrome auf Windows").
  userAgent  String?
  createdAt  DateTime  @default(now())
  /// Wird bei jedem erfolgreichen Push aktualisiert; bei 410/404 löschen wir die Zeile.
  lastUsedAt DateTime?

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
}

model Verification {
  // Better Auth Single-Use-Tokens (Email-Verify, Passwort-Reset, OTP, …).
  id         String   @id
  identifier String // Email-Adresse oder User-ID
  value      String // Token (URL-safe random)
  expiresAt  DateTime
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt

  @@index([identifier])
  @@index([expiresAt])
}

// ─────────────────────────────────────────────────────────────────────
// Domain — Profil + Freundschaften
// ─────────────────────────────────────────────────────────────────────

model Profile {
  userId            String    @id
  realFirstName     String?
  realLastName      String?
  birthDate         DateTime?
  city              String?
  country           String?
  hobbies           String?
  bio               String?
  avatarUrl         String?
  // Pro Feld eine Sichtbarkeits-Stufe: PUBLIC | LOGGED_IN | FRIENDS | PRIVATE.
  // Schema-frei als JSONB, weil Felder über die Zeit dazukommen.
  visibility        Json      @default("{}")
  /// Opt-in: erscheint im öffentlichen Leaderboard. Default `false` —
  /// Spec verlangt explizit Opt-in pro Nutzer (Datenschutz-Default privat).
  publicLeaderboard Boolean   @default(false)
  /// Wer darf mir Privatnachrichten senden: ALL (jeder eingeloggte User) oder
  /// FRIENDS (nur Freunde). Default ALL; unter 16 (bei Geburtsdatum-Eintrag)
  /// wird FRIENDS vorbelegt, bleibt aber änderbar. Per-Sender-Sperre (`DmBlock`)
  /// überschreibt das.
  dmPolicy          DmPolicy  @default(ALL)
  createdAt         DateTime  @default(now())
  updatedAt         DateTime  @updatedAt

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model Friendship {
  requesterId String
  addresseeId String
  status      FriendshipStatus @default(PENDING)
  createdAt   DateTime         @default(now())
  updatedAt   DateTime         @updatedAt

  requester User @relation("FriendshipRequester", fields: [requesterId], references: [id], onDelete: Cascade)
  addressee User @relation("FriendshipAddressee", fields: [addresseeId], references: [id], onDelete: Cascade)

  @@id([requesterId, addresseeId])
  @@index([addresseeId, status])
}

// Meldung eines Users gegen einen anderen (Moderation). Zweistufig erfasst:
// `context` = wo (Profil / Chat / Spielverhalten), `reason` = warum.
model Report {
  id             String        @id @default(cuid())
  reporterId     String
  reportedUserId String
  context        ReportContext
  reason         ReportReason
  note           String?
  status         ReportStatus  @default(PENDING)
  createdAt      DateTime      @default(now())
  resolvedAt     DateTime?
  resolvedById   String?

  reporter     User @relation("ReportsMade", fields: [reporterId], references: [id], onDelete: Cascade)
  reportedUser User @relation("ReportsAgainst", fields: [reportedUserId], references: [id], onDelete: Cascade)

  @@index([status, createdAt])
  @@index([reportedUserId])
}

// „Erlaubnis entziehen": `blocker` erlaubt `blocked` keine PN mehr — überschreibt
// auch die FRIENDS-Policy (wirkt selbst unter Freunden). Asymmetrisch.
model DmBlock {
  blockerId String
  blockedId String
  createdAt DateTime @default(now())

  blocker User @relation("DmBlocker", fields: [blockerId], references: [id], onDelete: Cascade)
  blocked User @relation("DmBlocked", fields: [blockedId], references: [id], onDelete: Cascade)

  @@id([blockerId, blockedId])
  @@index([blockedId])
}

/// Last-Read-Marker pro DM-Konversation, damit Ungelesen-Zähler Reloads
/// überleben. `userId` hat die Konversation mit `otherUserId` bis `lastReadAt`
/// gelesen; ungelesen = Nachrichten von `otherUserId` an `userId` danach.
model DmRead {
  userId      String
  otherUserId String
  lastReadAt  DateTime @default(now())

  user User @relation("DmReadUser", fields: [userId], references: [id], onDelete: Cascade)

  @@id([userId, otherUserId])
  @@index([userId])
}

// ─────────────────────────────────────────────────────────────────────
// Domain — Spiel (M4–M10)
// ─────────────────────────────────────────────────────────────────────

model Game {
  id             String        @id @default(cuid())
  variant        GameVariant
  // Erlaubte Ansage-Arten für dieses Spiel — beim Game-Start aus dem
  // LobbyTable kopiert (Default ALLES für direkt/test angelegte Spiele).
  announceLevel  AnnounceLevel @default(ALLES)
  // Optionale Wertungsregeln (beim Game-Start aus dem LobbyTable kopiert).
  // sackRule: < 21 Kartenpunkte → Rundenwertung verfällt komplett.
  // weisNeedsTrick: kein Stich → Weis-Punkte verfallen wieder.
  sackRule       Boolean       @default(false)
  weisNeedsTrick Boolean       @default(false)
  // Echtes Abheben aktiv? Beim Game-Start aus dem LobbyTable kopiert.
  cutEnabled     Boolean       @default(true)
  ruleVersion    String // spec_version aus jass_rules.json
  modelVersion   String? // NN-Release-Tag (für Replays)
  startedAt      DateTime      @default(now())
  endedAt        DateTime?
  finalScore     Json? // { team0: 81, team1: 76, matsch: false }

  /// Wenn `true`, ist das Replay über `/api/games/:id/replay/public` ohne
  /// Login erreichbar — Spec-Feature „Öffentliche/teilbare Replays". Default
  /// `false` (Datenschutz-Default); jeder Teilnehmer darf via PATCH umschalten.
  publicReplay Boolean @default(false)

  // M6: Game gehört zu einem LobbyTable (nullable für Pre-M6-Daten und
  // potenzielle direkt-erzeugte Test-Games; ab M6-C ist es bei Neu-Anlagen
  // immer gesetzt).
  tableId String?
  table   LobbyTable? @relation("TableGames", fields: [tableId], references: [id], onDelete: SetNull)

  seats                GameSeat[]
  moves                Move[]
  rounds               RoundDecision[]
  chatMessages         ChatMessage[]
  archivedChatMessages ArchivedChatMessage[]
  rematchVotes         RematchVote[]

  // 1:1-Rückseite zu LobbyTable.currentGameId — wenn dieses Game gerade
  // „das aktive" des Tischs ist, zeigt der Tisch hier zurück.
  currentForTable LobbyTable? @relation("CurrentGame")

  @@index([startedAt])
  @@index([tableId])
}

model GameSeat {
  gameId     String
  seat       Int // 0..3 bei Kreuz-4P
  userId     String? // null = KI-Sitz von Anfang an
  aiSeatType String? // "heuristic" | "random" | "nn-v0.1.0" | …

  // **Aussteig-Tracking** (Sprint Q):
  // Wenn ein Mensch aus dem laufenden Spiel aussteigt, lassen wir `userId`
  // stehen (für Statistik + Profil-History), setzen aber `leftAt` und
  // `replacedByAiSeatType`. Server-Logik behandelt den Sitz ab dann wie
  // einen KI-Sitz vom Typ `replacedByAiSeatType`.
  leftAt               DateTime? // null = noch dabei
  replacedByAiSeatType String? // "heuristic" wenn leftAt gesetzt

  game Game  @relation(fields: [gameId], references: [id], onDelete: Cascade)
  user User? @relation(fields: [userId], references: [id], onDelete: SetNull)

  @@id([gameId, seat])
  @@index([userId])
}

model Move {
  id        BigInt   @id @default(autoincrement())
  gameId    String
  seq       Int // 1..36 (gesamt-spielweit)
  seat      Int // 0..3
  cardIndex Int // 0..35
  trickIdx  Int // 0..8
  ts        DateTime @default(now())
  userId    String? // wer den Zug gespielt hat (null = KI)

  game Game  @relation(fields: [gameId], references: [id], onDelete: Cascade)
  user User? @relation(fields: [userId], references: [id], onDelete: SetNull)

  @@unique([gameId, seq])
  @@index([gameId, trickIdx])
}

model RoundDecision {
  id        String @id @default(cuid())
  gameId    String
  roundIdx  Int
  mode      String // trumpf | oben | unten | slalom
  trumpSuit Int? // 0..3 oder null
  starter   Int // seat
  weisen    Json // per-Spieler-Liste

  // Slalom-Ansage (Modus alterniert pro Stich). Aus mode/trumpSuit allein
  // NICHT ableitbar → fürs Replay nötig. Gilt für alle Varianten (Kreuz/Solo
  // + Bodensee); Default false für Nicht-Slalom-Runden.
  slalom Boolean @default(false)

  // Bodensee: kompletter initialer Deal als JSON, damit sich die Runde fürs
  // Replay rekonstruieren lässt (verdeckte Tisch-Karten stehen in keinem Move).
  // Form: { hands: Card[][], tables: { visible, hidden }[][] }. Null für
  // Kreuz/Solo (deren Hände stehen implizit in den Moves) und für alte
  // Bodensee-Spiele von vor dieser Migration.
  bodenseeDeal Json?

  game Game @relation(fields: [gameId], references: [id], onDelete: Cascade)

  @@unique([gameId, roundIdx])
}

// ─────────────────────────────────────────────────────────────────────
// Domain — Lobby + Tisch (M6)
//
// Lebenszyklus eines `LobbyTable`:
//   1. Owner öffnet Tisch (Status WAITING). Sitz 0 = Owner, Sitze 1..3 leer
//      oder vom Owner direkt mit KI vorbelegt.
//   2. Andere Spieler joinen je nach `joinMode` (OPEN/REQUEST/INVITE).
//   3. Sobald 4 Sitze belegt sind (manuell oder per Auto-Fill nach
//      `autoFillSeconds`) startet das erste Spiel → `currentGameId` zeigt auf
//      das neue Game, Status wechselt zu IN_GAME.
//   4. Game endet → Status POST_GAME, Re-Match-Voting läuft. Bei „alle YES"
//      → neues Game, alter Game-Eintrag bleibt für Replays/Statistik im
//      `games[]`-Array des Tischs. Bei mindestens 1 NO + Spieler-Drop →
//      zurück zu WAITING.
//   5. Letzter Spieler verlässt → Status CLOSED, Tisch verschwindet aus der
//      Lobby-Liste, Historie bleibt für die Replays.
// ─────────────────────────────────────────────────────────────────────

model LobbyTable {
  id              String        @id @default(cuid())
  ownerId         String
  joinMode        JoinMode      @default(OPEN)
  variant         GameVariant   @default(KREUZ_4P)
  // Erlaubte Ansage-Arten am Tisch (Owner wählt beim Eröffnen). Default
  // ALLES = alle Möglichkeiten aktiv. Wird beim Game-Start auf das Game kopiert.
  announceLevel   AnnounceLevel @default(ALLES)
  // Optionale Wertungsregeln (Owner wählt beim Eröffnen, beim Game-Start
  // aufs Game kopiert). sackRule: < 21 Kartenpunkte → Runde verfällt komplett.
  // weisNeedsTrick: kein Stich → Weis-Punkte verfallen wieder.
  sackRule        Boolean       @default(false)
  weisNeedsTrick  Boolean       @default(false)
  // Echtes Abheben vor dem Austeilen (außer WELI-Deal/Spiel 1). Owner wählt
  // beim Eröffnen. Default an (Vorarlberger Tradition).
  cutEnabled      Boolean       @default(true)
  // Default-KI-Typ für Auto-Fill und manuell platzierte KI-Sitze. Owner
  // konfiguriert das beim Tisch-Erstellen; einzelne Sitze können per
  // `LobbyTableSeat.aiSeatType` davon abweichen.
  aiSeatType      String        @default("heuristic") // "random" | "heuristic" | "nn" | "nn-vX.Y.Z"
  // Auto-Fill-Timer in Sekunden ab letzter Sitz-Änderung. `null` = nie
  // automatisch auffüllen, Owner muss manuell starten.
  autoFillSeconds Int?          @default(30)
  // Starter-Bestimmung bei Re-Match (Vorarlberger Tradition). Default ist
  // `SIEGER_GIBT` — Owner kann beim Tisch-Erstellen umstellen.
  restartMode     RestartMode   @default(SIEGER_GIBT)

  // **Punkteziel**: Die Partie ist gewonnen, sobald ein Team diese Punkte
  // kumulativ über mehrere Spiele erreicht. Vorarlberger Standard: 1000
  // oder 1200. Wird beim Tisch-Erstellen festgelegt.
  targetScore Int @default(1000)

  // **Kumulative Scores** über alle bisher beendeten Spiele am Tisch.
  // Wird nach jedem Game-Ende um `finalScore.team_card_points` (inkl.
  // Matsch-Bonus) erweitert. Sobald einer der Werte >= targetScore, ist
  // die Partie gewonnen und der Tisch landet in MATCH_OVER.
  //
  // Index = Team-ID. Kreuz-Jass nutzt Team0+1 (Team2/3 bleiben 0).
  // Solo-Jass nutzt alle vier — jeder Sitz ist sein eigenes Team.
  cumulativeScoreTeam0 Int @default(0)
  cumulativeScoreTeam1 Int @default(0)
  cumulativeScoreTeam2 Int @default(0)
  cumulativeScoreTeam3 Int @default(0)

  // **„Im Sack" verfallene Punkte** (reine Info, kumuliert über die Partie).
  // Zählen NIE zur Wertung — cumulativeScore* bleibt davon unberührt; nur zur
  // Anzeige im Partie-Stand (… und zum Lästern). Index = Konto wie oben.
  sackedPointsTeam0 Int @default(0)
  sackedPointsTeam1 Int @default(0)
  sackedPointsTeam2 Int @default(0)
  sackedPointsTeam3 Int @default(0)

  status LobbyTableStatus @default(WAITING)

  // Aktuelles oder zuletzt-aktives Game am Tisch. In WAITING = null.
  // Wird beim Game-Start gesetzt, beim Re-Match auf das neue Game
  // umgeschwenkt. Alte Games bleiben über `games[]` erreichbar.
  currentGameId String? @unique
  currentGame   Game?   @relation("CurrentGame", fields: [currentGameId], references: [id], onDelete: SetNull)

  createdAt DateTime  @default(now())
  closedAt  DateTime?

  /// Zeitstempel der letzten Sitz-Mutation (open mit initial seats, join,
  /// approve, accept-invite, leave). Der Auto-Fill-Sweeper (M6-D) berechnet
  /// daraus die Fälligkeit: wenn `lastSeatChangeAt + autoFillSeconds <= now()`
  /// und der Tisch noch nicht voll ist, werden leere Sitze mit KI gefüllt
  /// und das Spiel startet. Spieler-Beitritte „resetten" den Timer auf
  /// neue 30 s (User-Entscheidung 1 in der M6-Vorschau).
  lastSeatChangeAt DateTime @default(now())

  owner        User              @relation("TableOwner", fields: [ownerId], references: [id], onDelete: Restrict)
  seats        LobbyTableSeat[]
  games        Game[]            @relation("TableGames")
  joinRequests GameJoinRequest[]
  invites      TableInvite[]

  @@index([status])
  @@index([createdAt])
  @@index([ownerId])
}

model LobbyTableSeat {
  // 4 Einträge pro Tisch, einer je `seat`-Position 0..3.
  tableId    String
  seat       Int // 0..3 bei Kreuz-4P
  userId     String? // null = entweder leer oder KI-Sitz
  aiSeatType String? // wenn gesetzt: KI mit diesem Typ; sonst Mensch oder leer
  // Reihenfolge des Beitritts. Wird für Owner-Wechsel benutzt: wenn der
  // aktuelle Owner austritt, übernimmt der Spieler mit dem **kleinsten
  // joinOrder** unter den verbleibenden menschlichen Sitzen.
  joinOrder  Int
  joinedAt   DateTime @default(now())

  table LobbyTable @relation(fields: [tableId], references: [id], onDelete: Cascade)
  user  User?      @relation("TableSeats", fields: [userId], references: [id], onDelete: SetNull)

  @@id([tableId, seat])
  @@index([userId])
}

model GameJoinRequest {
  // Beitritts-Anfrage für Tische im JoinMode=REQUEST. Eine Anfrage pro
  // (Tisch, User) gleichzeitig — Re-Anfragen nach Ablehnung gehen über einen
  // neuen Eintrag mit anderem `createdAt` und CANCELLED-Status auf dem alten.
  id        String            @id @default(cuid())
  tableId   String
  userId    String
  status    JoinRequestStatus @default(PENDING)
  createdAt DateTime          @default(now())
  decidedAt DateTime?

  table LobbyTable @relation(fields: [tableId], references: [id], onDelete: Cascade)
  user  User       @relation("JoinRequests", fields: [userId], references: [id], onDelete: Cascade)

  @@index([tableId, status])
  @@index([userId])
}

model TableInvite {
  // Einladung an einen registrierten User für einen Tisch im JoinMode=INVITE
  // (oder als „bevorzugter Schnellbeitritt" für OPEN-/REQUEST-Tische).
  id              String       @id @default(cuid())
  tableId         String
  inviteeUserId   String
  invitedByUserId String
  status          InviteStatus @default(PENDING)
  createdAt       DateTime     @default(now())
  respondedAt     DateTime?

  table     LobbyTable @relation(fields: [tableId], references: [id], onDelete: Cascade)
  invitee   User       @relation("InvitesReceived", fields: [inviteeUserId], references: [id], onDelete: Cascade)
  invitedBy User       @relation("InvitesSent", fields: [invitedByUserId], references: [id], onDelete: Cascade)

  @@unique([tableId, inviteeUserId])
  @@index([inviteeUserId, status])
}

model RematchVote {
  // Pro abgeschlossenem Game stimmt jeder menschliche Spieler über das
  // Re-Match ab. KI-Sitze stimmen implizit YES (sie sind sowieso bereit).
  // `gameId + userId` ist eindeutig, ein User kann nicht zweimal voten.
  gameId  String
  userId  String
  vote    RematchVoteValue
  votedAt DateTime         @default(now())

  game Game @relation(fields: [gameId], references: [id], onDelete: Cascade)
  user User @relation("RematchVotes", fields: [userId], references: [id], onDelete: Cascade)

  @@id([gameId, userId])
}

// ─────────────────────────────────────────────────────────────────────
// Domain — Chat (M8)
// ─────────────────────────────────────────────────────────────────────

model ChatMessage {
  id         BigInt      @id @default(autoincrement())
  channel    ChatChannel
  channelKey String // "lobby:global" | "game:<id>" | "dm:<a>:<b>"
  senderId   String
  body       String // sanitisierte Markdown→HTML
  createdAt  DateTime    @default(now())

  // Optionale Spiel-Verknüpfung — beim DM, der während eines Spiels läuft, wird hier
  // gameId gesetzt. Profil-History rendert dann "Während Partie #X, Mitspieler: …".
  gameId String?

  sender User  @relation(fields: [senderId], references: [id], onDelete: Cascade)
  game   Game? @relation(fields: [gameId], references: [id], onDelete: SetNull)

  @@index([channelKey, createdAt])
  @@index([senderId])
}

/// Wortfilter für die Chat-Moderation (Lobby/Spiel/DM).
///
/// Pflege liegt im Admin-Bereich. Treffer werden im Chat-Body durch `***`
/// maskiert (statt die Nachricht ganz abzulehnen — bessere UX, der User
/// sieht trotzdem, was er geschrieben hat, kann umformulieren). Audit-
/// Eintrag pro Treffer.
///
/// `word` ist lowercase gespeichert; Substring-Match ist case-insensitive.
model BannedWord {
  id        Int      @id @default(autoincrement())
  word      String   @unique
  reason    String?
  createdAt DateTime @default(now())

  @@index([createdAt])
}

/// Archiv für Lobby-Chat-Nachrichten, die älter als 12 h sind.
///
/// **Warum eine eigene Tabelle**: Spec verlangt eine getrennte Archiv-Tabelle
/// statt purer DELETE. Vorteile: Audit-Spuren bleiben erhalten, Profil-Konversations-
/// History kann später drüber laufen, und der Live-Lobby-Chat bleibt klein/schnell.
/// Game- und DM-Chat werden NICHT archiviert (sie bleiben in `ChatMessage`, siehe
/// `chat-cleanup.service.ts`).
///
/// Schema spiegelt `ChatMessage` 1:1 plus `archivedAt`. FKs identisch
/// (Cascade auf User-Hard-Delete für DSGVO-Konsistenz, SetNull auf Game-Delete).
model ArchivedChatMessage {
  id         BigInt      @id @default(autoincrement())
  channel    ChatChannel
  channelKey String
  senderId   String
  body       String
  /// Original-Erstellungszeit (NICHT die Archivierungszeit) — wichtig für die
  /// chronologische Anzeige in der Profil-History.
  createdAt  DateTime
  /// Wann die Nachricht aus dem Live-Chat ins Archiv gewandert ist.
  archivedAt DateTime    @default(now())

  gameId String?

  sender User  @relation(fields: [senderId], references: [id], onDelete: Cascade)
  game   Game? @relation(fields: [gameId], references: [id], onDelete: SetNull)

  @@index([channelKey, createdAt])
  @@index([archivedAt])
  @@index([senderId])
}

// ─────────────────────────────────────────────────────────────────────
// Admin / Audit / Blocklist
// ─────────────────────────────────────────────────────────────────────

model AuditLog {
  id        BigInt   @id @default(autoincrement())
  actorId   String?
  action    String // "auth.register" | "user.block" | …
  target    String?
  meta      Json     @default("{}")
  ip        String?
  createdAt DateTime @default(now())

  actor User? @relation("AuditActor", fields: [actorId], references: [id], onDelete: SetNull)

  @@index([createdAt])
  @@index([action])
}

model AdminSetting {
  // Sensitive Werte (z.B. smtp.password) werden mit dem App-Secret AES-GCM
  // verschlüsselt im `value` als { ciphertext, iv, tag } abgelegt.
  key       String   @id // "smtp.host" | "registration.enabled" | …
  value     Json
  updatedAt DateTime @updatedAt
  updatedBy String?
}

model Blocklist {
  pattern   String   @id // Regex über E-Mail oder Domain
  reason    String?
  createdAt DateTime @default(now())
}

// ─────────────────────────────────────────────────────────────────────
// Enums
// ─────────────────────────────────────────────────────────────────────

enum Role {
  PLAYER
  MODERATOR
  ADMIN
}

enum UserStatus {
  ACTIVE
  BLOCKED
  DELETED_SOFT
}

enum FriendshipStatus {
  PENDING
  ACCEPTED
  BLOCKED
}

enum ReportContext {
  PROFILE
  CHAT
  GAME
}

enum ReportReason {
  RACISM
  SEXISM
  HARASSMENT
  THREATS
  VIOLENCE
  SPAM
  OTHER_ILLEGAL
  GAME_DISRUPTION
}

enum ReportStatus {
  PENDING
  REVIEWED
  DISMISSED
  ACTION_TAKEN
}

enum DmPolicy {
  ALL
  FRIENDS
}

enum GameVariant {
  KREUZ_4P
  KREUZ_6P
  KREUZ_STEIGERN
  SOLO_4P
  BODENSEE_2P
}

// Erlaubte Ansage-Arten pro Tisch (strikte Leiter, jede Stufe erweitert die
// vorige). Siehe @jass/engine `AnnounceLevel` / `announceConstraints`.
//   TRUMPF     — nur Trumpf
//   GEISS_BOCK — + Oben (Bock) / Unten (Geiss)
//   SLALOM     — + Slalom (alterniert Oben/Unten, braucht daher Geiss/Bock)
//   ALLES      — + Gumpf (Default)
enum AnnounceLevel {
  TRUMPF
  GEISS_BOCK
  SLALOM
  ALLES
}

enum ChatChannel {
  LOBBY
  GAME
  // Tisch-weiter Chat (LobbyTable): lebt ab der Warte-Phase und bleibt über
  // Spielstart + Re-Matches erhalten (anders als der spiel-gebundene GAME-Chat).
  TABLE
  DM
}

// ─────────────────────────────────────────────────────────────────────
// Enums — M6 Lobby
// ─────────────────────────────────────────────────────────────────────

enum LobbyTableStatus {
  WAITING // wartet auf Mitspieler
  IN_GAME // Spiel läuft (currentGameId ist gesetzt und nicht finished)
  POST_GAME // letztes Game abgeschlossen, Re-Match-Voting läuft
  MATCH_OVER // kumulative Punkte haben targetScore erreicht — Partie gewonnen
  CLOSED // alle Spieler weg; Tisch verschwindet aus der Lobby-Liste
}

enum JoinMode {
  OPEN // jeder darf joinen
  REQUEST // Owner muss jede Anfrage explizit approve-n
  INVITE // nur eingeladene User können joinen
}

enum RestartMode {
  // Vorarlberger Tradition: zwei Modi für die Starter-Bestimmung beim Re-Match.
  WELI // Karten werden neu ausgeteilt, wer den WELI (Schelle-6) bekommt, beginnt
  SIEGER_GIBT // Sieger gibt, der links davon (im Uhrzeigersinn) kommt raus
}

enum JoinRequestStatus {
  PENDING
  APPROVED
  DENIED
  CANCELLED // Anfragender hat zurückgezogen oder Owner-Wechsel-Auto-Cancel
}

enum InviteStatus {
  PENDING
  ACCEPTED
  DECLINED
  EXPIRED // z.B. wenn der Tisch geschlossen wurde
  CANCELLED // Owner hat die Einladung zurückgezogen
}

enum RematchVoteValue {
  YES
  NO
}
